Use "visibility: collapse" for legacy single-selection richlistbox Doesn't work correctly for Up/Down, but at least don't break navigation at all

--- a/options.css
+++ b/options.css
@@ -16,7 +16,7 @@
 	visibility: hidden; /* Hide from Tab/Shift+Tab */
 }
 #cl-list[cl_hideDisabled] > .cl-list-item[cl_disabled] {
-	display: none;
+	visibility: collapse;
 }
 #consoleLoggerOptions[cl_disabled] #cl-list .cl-enabled {
 	opacity: 0.68;
